fixed card-content y overflow, fixed nav-bar class focus to stay on current class

--- a/react-app/src/components/BrowseCards/BrowseCards.css
+++ b/react-app/src/components/BrowseCards/BrowseCards.css
@@ -99,6 +99,7 @@
   overflow-wrap: anywhere;
   word-break: keep-all;
   max-width: 100%;
+  overflow-y: auto;
 
 
 }
